--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,8 +14,16 @@
 -----------------------------------------------------------------------------------*/
 
 // Requirements
-@import "../../node_modules/bootstrap/scss/bootstrap-grid";
+// @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Globals
 @import "globals/_variables";
-
+@import "globals/_base";
+@import "globals/_buttons";
+@import "globals/_commons";
+@import "globals/_topbar";
+@import "globals/_header";
+@import "globals/_navbar";
+@import "globals/_footer";
+@import "globals/_main";
+@import "globals/_breadcrumb";
