--- a/src/sass/globals/_footer.scss
+++ b/src/sass/globals/_footer.scss
@@ -7,6 +7,8 @@
 
 .footer{
     margin-top: 2em;
+    padding-top: 2em;
+    background: lighten($color2, 10%);
     
     .pre-footer{
         padding: 4em 0;
