--- a/src/sass/loop/faq.scss
+++ b/src/sass/loop/faq.scss
@@ -16,7 +16,7 @@ body.post-type-archive-faq{
         z-index: -1;
     }
     .square-container{
-        color: $orange;
+        // color: $orange;
         padding-right: 1em;
     }
     .tab-label{
