--- a/src/sass/loop/single-contract.scss
+++ b/src/sass/loop/single-contract.scss
@@ -23,10 +23,10 @@ body.single-contract{
                 text-align: center;
                 font-size: 1.5em;
                 line-height: 1.9em;
-                color: $orange;
+                // color: $orange;
                 &:hover,
                 &:active{
-                    background: $orange;
+                    // background: $orange;
                     color: #fff;
                 }
             }
