--- a/src/sass/globals/_variables.scss
+++ b/src/sass/globals/_variables.scss
@@ -1,8 +1,7 @@
 // Fonts
-// @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Quicksand:wght@300;400;700&display=swap');
-$font-family-sans-serif: 'Poppins', sans-serif !default;
-$font-family-serif: 'Quicksand', serif !default;
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+$font-family-sans-serif: 'Outfit', sans-serif !default;
+$font-family-serif: 'Outfit', serif !default;
 
 // Grids
 $grid-breakpoints: (
@@ -21,13 +20,15 @@ $container-max-widths: (
 ) !default;
 
 // Website Color
-$color1: #3e2e83;
-$color2: #76b677;
-
-// Colors
-// $blue:    #564f71 !default;
-// $light-blue:   #e9e6ef !default;
+$color1: #2D3492;
+$color2: #B9E6F8;
 
 // Body
-$body-color: #3e2e83 !default;
-// $orange: #bb1d23 !default;
+$body-color: #5B5B5B !default;
+
+// Social Colors
+$facebook-color: #3b5998;
+$instagram-color: #cd00d1;
+$linkedin-color: #0e76a8;
+$twitter-color: #1da1f2;
+$youtube-color: #ff0000;
