--- a/src/sass/globals/_main.scss
+++ b/src/sass/globals/_main.scss
@@ -13,14 +13,14 @@
         //     margin-right: 0.5em;
         // }
     }
-    .wpcf7{
-        input[type=text],
-        input[type=email],
-        input[type=phone]{
-            display: block;
-            border: none;
-        }
-    }
+    // .wpcf7{
+    //     input[type=text],
+    //     input[type=email],
+    //     input[type=phone]{
+    //         display: block;
+    //         border: none;
+    //     }
+    // }
 }
 
 // Background
