--- a/src/sass/globals/_header.scss
+++ b/src/sass/globals/_header.scss
@@ -1,66 +1,92 @@
 header{
-    background: url('build/img/header-border-top.png') #fff repeat-x top left;
-    padding: 3em 0 0 0;
-    &> .container{
-        padding-bottom: 2em;
+    background: #0d0d0d;
+    color: #f9c782;
+    &:before{
+        content: ' ';
+        width: 100%;
+        height: 8px;
+        display: block;
+        background: rgb(195,154,94);
+        background: linear-gradient(90deg, rgba(195,154,94,1) 0%, rgba(249,199,130,1) 46%, rgba(153,109,62,1) 100%);
     }
-    .header-logo {
-        display: inline-block;
-        width: auto;
-        padding: 0;
-        img{
-            max-width: 115px;
-            width: 100%;
-            transition: all 0.2s ease-in-out;
-        }
+    &:after{
+        content: ' ';
+        width: 100%;
+        height: 1px;
+        display: block;
+        background: rgb(195,154,94);
+        background: linear-gradient(90deg, rgba(195,154,94,1) 0%, rgba(249,199,130,1) 46%, rgba(153,109,62,1) 100%);
     }
-    .icon-whatsapp{
-        color: #25d366;
-        font-size: 1.5em;
+    .header-logo img{    
+        margin-top: 1em;
+        margin-bottom: 1em;
     }
-    #fullsize-menu-toggler{
-        cursor: pointer;
-        span{
-            text-transform: uppercase;
-            letter-spacing: 0.4em;
-            font-size: 0.7em;
-            display: inline-block;
-            margin-right: 1em;
-        }
+    .navbar{
+        display: none;
     }
-    .right{
-        text-align: right;
-    }
-    .extra-navbar{
-        text-align: right;
-        .icon-header{
-            display: inline-block;
-            margin: 0 0.15em;
-            ion-icon{
-                font-size: 20px;
-            }
-        }
-    }
+
+    // background: url('build/img/header-border-top.png') #fff repeat-x top left;
+    // padding: 3em 0 0 0;
+    // &> .container{
+    //     padding-bottom: 2em;
+    // }
+    // .header-logo {
+    //     display: inline-block;
+    //     width: auto;
+    //     padding: 0;
+    //     img{
+    //         max-width: 115px;
+    //         width: 100%;
+    //         transition: all 0.2s ease-in-out;
+    //     }
+    // }
+    // .icon-whatsapp{
+    //     color: #25d366;
+    //     font-size: 1.5em;
+    // }
+    // #fullsize-menu-toggler{
+    //     cursor: pointer;
+    //     span{
+    //         text-transform: uppercase;
+    //         letter-spacing: 0.4em;
+    //         font-size: 0.7em;
+    //         display: inline-block;
+    //         margin-right: 1em;
+    //     }
+    // }
+    // .right{
+    //     text-align: right;
+    // }
+    // .extra-navbar{
+    //     text-align: right;
+    //     .icon-header{
+    //         display: inline-block;
+    //         margin: 0 0.15em;
+    //         ion-icon{
+    //             font-size: 20px;
+    //         }
+    //     }
+    // }
 }
 
 @media screen and (max-width: 767px) {
-    header{
-        .header-logo{
-            margin: 0 auto;
-            display: block;
-            img{
-                max-width: 150px;
-                margin-bottom: 1em;
-            }
-        }
-        .right{
-            text-align: center;
-            border-top: 1px solid lighten($color1, 10%);
-        }
-        .icon-whatsapp{
-            font-size: 2.1em;
-            display: inline-block;
-            transform: translate(-6px, 7px);
-        }
-    }
+    // header{
+    //     .header-logo{
+    //         margin: 0 auto;
+    //         display: block;
+    //         img{
+    //             max-width: 150px;
+    //             margin-bottom: 1em;
+    //         }
+    //     }
+    //     .right{
+    //         text-align: center;
+    //         border-top: 1px solid lighten($color1, 10%);
+    //     }
+    //     .icon-whatsapp{
+    //         font-size: 2.1em;
+    //         display: inline-block;
+    //         transform: translate(-6px, 7px);
+    //     }
+    // }
 }
