--- a/src/sass/page-template/page-onepage.scss
+++ b/src/sass/page-template/page-onepage.scss
@@ -1,130 +1,173 @@
 @import "../globals/_mixin";
 @import "../globals/_variables"; // Customization for Bootstrap
 // @import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "../mixins/contact-form-7";
 
 body.page-template-page-onepage{
+
+    .main-wrapper{
+        background: $color2;
+        color: #fff;
+        img{
+            display: inline-block;
+            max-width: 100%;
+            height: auto;
+            border: 6px solid rgba($color1, 1);
+            margin-top: 1em;
+            margin-bottom: 2em;
+            box-shadow: 0 0 30px 0 rgba($color1,0.4);
+            -webkit-box-shadow: 0 0 30px 0 rgba($color1,0.4);
+            -moz-box-shadow: 0 0 30px 0 rgba($color1,0.4);
+        }
+
+        h1,h2,h3,h4,h5{
+            font-family: $font-family-serif;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        
+        h1{
+            font-size: 3em;
+            color: $color1;
+        }
+        h2{
+            font-family: $font-family-sans-serif;
+            font-size: 1.2;
+            font-style: italic;
+            color: #ddd;
+        }
+        p{
+            max-width: 800px;
+            margin: 0 auto;
+        }
+    }
+
     // Default Content
-    #section-1{
-        .thumb-wrapper{
-            padding: 0 8em;
-            img{
-                display: inline-block;
-                box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.3);
-                -webkit-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.3);
-                -moz-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.3);
-            }
-        }
-        .text-wrapper{
-            line-height: 2.25em;
-            h1{
-                text-align: left;
-                font-style: normal;
-                font-weight: 200;
-                font-size: 26px;
-                line-height: 30px;
-                letter-spacing: 0.34em;
-                margin-top: 2.2em;
-                margin-bottom: 2.5em;
-            }
-            .alignright{
-                margin-left: auto;
-                display: block;
-            }
-        }
-    }
+    // #section-1{
+    //     .thumb-wrapper{
+    //         padding: 0 8em;
+    //         img{
+    //             display: inline-block;
+    //             box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.3);
+    //             -webkit-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.3);
+    //             -moz-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.3);
+    //         }
+    //     }
+    //     .text-wrapper{
+    //         line-height: 2.25em;
+    //         h1{
+    //             text-align: left;
+    //             font-style: normal;
+    //             font-weight: 200;
+    //             font-size: 26px;
+    //             line-height: 30px;
+    //             letter-spacing: 0.34em;
+    //             margin-top: 2.2em;
+    //             margin-bottom: 2.5em;
+    //         }
+    //         .alignright{
+    //             margin-left: auto;
+    //             display: block;
+    //         }
+    //     }
+    // }
     // Services
-    .home-services{
-        padding-top: 6em;
-        padding-bottom: 6em;
-        h4.title{
-            text-align: center;
-            font-style: normal;
-            font-weight: 200;
-            font-size: 26px;
-            line-height: 30px;
-            letter-spacing: 0.34em;
-            margin-top: 1.8em;
-            margin-bottom: 2.5em;
-            text-transform: uppercase;
-        }
-        .item-servizi{
-            h2{
-                text-align: center;
-                margin-top: 2em;
-                text-transform: uppercase;
-                letter-spacing: 0.25em;
-                font-weight: 400;
-                font-size: 24px;
-            }
-            img{
-                box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.52);
-                -webkit-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.52);
-                -moz-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.52);
-            }
-            .btn-wrapper{
-                display: none;
-            }
-        }
-    }
+    // .home-services{
+    //     padding-top: 6em;
+    //     padding-bottom: 6em;
+    //     h4.title{
+    //         text-align: center;
+    //         font-style: normal;
+    //         font-weight: 200;
+    //         font-size: 26px;
+    //         line-height: 30px;
+    //         letter-spacing: 0.34em;
+    //         margin-top: 1.8em;
+    //         margin-bottom: 2.5em;
+    //         text-transform: uppercase;
+    //     }
+    //     .item-servizi{
+    //         h2{
+    //             text-align: center;
+    //             margin-top: 2em;
+    //             text-transform: uppercase;
+    //             letter-spacing: 0.25em;
+    //             font-weight: 400;
+    //             font-size: 24px;
+    //         }
+    //         img{
+    //             box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.52);
+    //             -webkit-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.52);
+    //             -moz-box-shadow: 1px 10px 25px -2px rgba(79,73,107,0.52);
+    //         }
+    //         .btn-wrapper{
+    //             display: none;
+    //         }
+    //     }
+    // }
+
     // Contacts
     #contact-form{
-        // background: $light-blue;
-        margin-top: 8em;
-        padding-top: 5em;
-        padding-bottom: 5em;
+        background: url('../../../../../../wp-content/uploads/2022/03/bg-contacts.jpg') no-repeat $color1;
+        background-size: cover;
+        padding-top: 3em;
+        padding-bottom: 3em;
 
-        h3{
-            font-weight: 100;
-            text-transform: uppercase;
+        h4{
+            font-family: $font-family-serif;
+            font-size: 2em;
+            font-weight: 800;
         }
-        p.intro{
-            a{
-                text-decoration: underline;
-                font-weight: 800;
-            }
-            margin-top: 2em;
-            margin-bottom: 5em;
+        p{
+            max-width: 800px;
+            margin: 0 auto 1em auto;
         }
-        label{
-            text-align: left;
-            font-weight: 100;
-            font-style: italic;
-            padding-left: 1em;
-            padding-bottom: 0.25em;
-            opacity: 0.9;
-            cursor: none;
+        .wpcf7{
+            max-width: 700px;
+            margin: 0 auto;
+            @include contact-form-7;
         }
-        input,
-        textarea{
-            // background: $light-blue;
-            padding: 1.5em 1em;
-            display: inline-block;
-            border-radius: 0.5em;
-            // border: 3px solid rgba($blue, 0.25);
-            transition: all 0.5s ease-in-out;
-            cursor: none;
-            &::-webkit-input-placeholder {
-                // color: $blue;
-                font-weight: 100;
-                font-style: italic;
-                opacity: 0.6;
-            }
-            &:focus{
-                // border: 3px solid rgba($blue, 0.45);
-            }
-        }
-        button[type=submit]{
-            background: transparent;
-            border: none;
-            text-transform: uppercase;
-            letter-spacing: 0.3em;
-            // color: $blue;
-        }
+
+        // label{
+        //     text-align: left;
+        //     font-weight: 100;
+        //     font-style: italic;
+        //     padding-left: 1em;
+        //     padding-bottom: 0.25em;
+        //     opacity: 0.9;
+        //     cursor: none;
+        // }
+        // input,
+        // textarea{
+        //     // background: $light-blue;
+        //     padding: 1.5em 1em;
+        //     display: inline-block;
+        //     border-radius: 0.5em;
+        //     // border: 3px solid rgba($blue, 0.25);
+        //     transition: all 0.5s ease-in-out;
+        //     cursor: none;
+        //     &::-webkit-input-placeholder {
+        //         // color: $blue;
+        //         font-weight: 100;
+        //         font-style: italic;
+        //         opacity: 0.6;
+        //     }
+        //     &:focus{
+        //         // border: 3px solid rgba($blue, 0.45);
+        //     }
+        // }
+        // button[type=submit]{
+        //     background: transparent;
+        //     border: none;
+        //     text-transform: uppercase;
+        //     letter-spacing: 0.3em;
+        //     // color: $blue;
+        // }
     }
 }
 
 @media only screen and (max-width: 1199px) { 
-    body.page-template-page-onepage #section-1 .thumb-wrapper { padding: 0 2em; }
-    body.page-template-page-onepage #section-1 .text-wrapper { line-height: 1.65em; margin-top: 4em; }
-    body.page-template-page-onepage #section-1 .text-wrapper h1{ margin-top: 1em; }
+    // body.page-template-page-onepage #section-1 .thumb-wrapper { padding: 0 2em; }
+    // body.page-template-page-onepage #section-1 .text-wrapper { line-height: 1.65em; margin-top: 4em; }
+    // body.page-template-page-onepage #section-1 .text-wrapper h1{ margin-top: 1em; }
 }
